--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>on
 <html>
 
 <head>
@@ -35,6 +35,63 @@
             <section>
                 <div>
                     <ul class="links-list">
+                        <li class="accordion_item">
+                            <div class="accordion_header">
+                                <span>My Certificate</span>
+                                <span class="icon">+</span>
+                            </div>
+
+                            <div class="accordion_content">
+
+                            <div class="stream_buttons_list">
+                                <ul>
+                                    <!--Change links below if needed-->
+                                    <li class="stream_buttons">
+                                        <a target="_blank"
+                                            href="https://coursera.org/share/07068eb563c0c6c578ebfd36d0e4360c" style="color:#374151; width: 100%; height: 100%; 
+                                        display: flex; justify-content: space-between;">
+                                            <img src="./assets/google.svg" width="20"
+                                                style="margin-right: 20px;" />
+                                            <p>Technical Support Basics</p>
+                                            <img src="./assets/open.svg" width="20" height="20"
+                                                style="margin-left: auto" />
+                                        </a>
+                                    </li>
+                                    <li class="stream_buttons">
+                                        <a target="_blank"
+                                            href="https://coursera.org/share/44f0b07c835a38b3841f999aa9d9c802" style="color:#374151; width: 100%; height: 100%; 
+                                        display: flex; justify-content: space-between;">
+                                            <img src="./assets/google.svg" width="20"
+                                                style="margin-right: 20px;" />
+                                            <p>OS and You: Becoming a Power User</p>
+                                            <img src="./assets/open.svg" width="20" height="20"
+                                                style="margin-left: auto" />
+                                        </a>
+                                    </li>
+                                    <li class="stream_buttons">
+                                        <a target="_blank"
+                                            href="https://coursera.org/share/f06fe2f2a83a2cb3da90831a9d42eef1" style="color:#374151; width: 100%; height: 100%; 
+                                        display: flex; justify-content: space-between;">
+                                            <img src="./assets/google.svg" width="20"
+                                                style="margin-right: 20px;" />
+                                            <p>Ins and Outs of Computer Networks</p>
+                                            <img src="./assets/open.svg" width="20" height="20"
+                                                style="margin-left: auto" />
+                                        </a>
+                                    </li>
+                                    <li class="stream_buttons">
+                                        <a target="_blank"
+                                            href="https://coursera.org/share/2d555191e459bf100fd32495e8721534" style="color:#374151; width: 100%; height: 100%; 
+                                        display: flex; justify-content: space-between;">
+                                            <img src="./assets/google.svg" width="20"
+                                                style="margin-right: 20px;" />
+                                            <p>IT Sec: Defense Against Digital Crime</p>
+                                            <img src="./assets/open.svg" width="20" height="20"
+                                                style="margin-left: auto" />
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
 
                         <li class="accordion_item">
                             <div class="accordion_header">
@@ -126,6 +183,7 @@
                                 </div>
                             </div>
                         </li>
+                        
                         <li class="link_button">
                             <a target="_blank" href="https://www.ryzendesu.com">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
