--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         </main>
 
         <footer>
-            <p>Mede with ❤️ by <a href="https://github.com/ShirokamiRyzen">Shirokami Ryzen</a></p>
+            <p>Made with ❤️ by <a href="https://github.com/ShirokamiRyzen">Shirokami Ryzen</a></p>
         </footer>
 
     </div>
