--- a/index.html
+++ b/index.html
@@ -31,74 +31,15 @@
         </header>
 
         <main>
-
             <section>
                 <div>
                     <ul class="links-list">
-                        <li class="accordion_item">
-                            <div class="accordion_header">
-                                <span>My Certificate</span>
-                                <span class="icon">+</span>
-                            </div>
-
-                            <div class="accordion_content">
-
-                            <div class="stream_buttons_list">
-                                <ul>
-                                    <!--Change links below if needed-->
-                                    <li class="stream_buttons">
-                                        <a target="_blank"
-                                            href="https://coursera.org/share/07068eb563c0c6c578ebfd36d0e4360c" style="color:#374151; width: 100%; height: 100%; 
-                                        display: flex; justify-content: space-between;">
-                                            <img src="./assets/google.svg" width="20"
-                                                style="margin-right: 20px;" />
-                                            <p>Technical Support Basics</p>
-                                            <img src="./assets/open.svg" width="20" height="20"
-                                                style="margin-left: auto" />
-                                        </a>
-                                    </li>
-                                    <li class="stream_buttons">
-                                        <a target="_blank"
-                                            href="https://coursera.org/share/44f0b07c835a38b3841f999aa9d9c802" style="color:#374151; width: 100%; height: 100%; 
-                                        display: flex; justify-content: space-between;">
-                                            <img src="./assets/google.svg" width="20"
-                                                style="margin-right: 20px;" />
-                                            <p>OS and You: Becoming a Power User</p>
-                                            <img src="./assets/open.svg" width="20" height="20"
-                                                style="margin-left: auto" />
-                                        </a>
-                                    </li>
-                                    <li class="stream_buttons">
-                                        <a target="_blank"
-                                            href="https://coursera.org/share/f06fe2f2a83a2cb3da90831a9d42eef1" style="color:#374151; width: 100%; height: 100%; 
-                                        display: flex; justify-content: space-between;">
-                                            <img src="./assets/google.svg" width="20"
-                                                style="margin-right: 20px;" />
-                                            <p>Ins and Outs of Computer Networks</p>
-                                            <img src="./assets/open.svg" width="20" height="20"
-                                                style="margin-left: auto" />
-                                        </a>
-                                    </li>
-                                    <li class="stream_buttons">
-                                        <a target="_blank"
-                                            href="https://coursera.org/share/2d555191e459bf100fd32495e8721534" style="color:#374151; width: 100%; height: 100%; 
-                                        display: flex; justify-content: space-between;">
-                                            <img src="./assets/google.svg" width="20"
-                                                style="margin-right: 20px;" />
-                                            <p>IT Sec: Defense Against Digital Crime</p>
-                                            <img src="./assets/open.svg" width="20" height="20"
-                                                style="margin-left: auto" />
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
-
+                        <!--Button Music Player-->
                         <li class="accordion_item">
                             <div class="accordion_header">
                                 <span>Listen to "Orange"</span>
                                 <span class="icon">+</span>
                             </div>
-
                             <div class="accordion_content">
                                 <div class="album_info">
                                     <a class="album_link" href="" target="_blank" rel="noopener">
@@ -111,7 +52,8 @@
                                 </div>
                                 <div class="available_stream">
                                     <audio id="song" class="block w-full max-w-md mx-auto" controls>
-                                        <source src="https://osanime.com/filedownload/2190008/Orange-(osanime.com).mp3" type="audio/mp3">
+                                        <source src="https://osanime.com/filedownload/2190008/Orange-(osanime.com).mp3"
+                                            type="audio/mp3">
                                     </audio>
                                     <p style="color:grey;">Available on all streaming platforms</p>
                                 </div>
@@ -133,7 +75,7 @@
                                         <li class="stream_buttons">
                                             <a target="_blank" href="https://music.apple.com/us/album/orange/982659827"
                                                 style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
-                                                <img src="./assets/apple.png" height="20" style="margin-right: 20px;" />
+                                                <img src="./assets/apple.svg" height="20" style="margin-right: 20px;" />
                                                 Apple Music
                                                 <img src="./assets/open.svg" width="20" height="20"
                                                     style="margin-left: auto" />
@@ -142,7 +84,7 @@
                                         <li class="stream_buttons">
                                             <a target="_blank" href="https://tidal.com/browse/track/144294816"
                                                 style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
-                                                <img src="./assets/tidal.png" height="20" style="margin-right: 20px;" />
+                                                <img src="./assets/tidal.svg" height="20" style="margin-right: 20px;" />
                                                 TIDAL
                                                 <img src="./assets/open.svg" width="20" height="20"
                                                     style="margin-left: auto" />
@@ -151,7 +93,7 @@
                                         <li class="stream_buttons">
                                             <a target="_blank" href="https://www.deezer.com/en/track/976030142"
                                                 style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
-                                                <img src="./assets/deezer.png" height="20"
+                                                <img src="./assets/deezer.svg" height="20"
                                                     style="margin-right: 20px;" />
                                                 Deezer
                                                 <img src="./assets/open.svg" width="20" height="20"
@@ -162,7 +104,7 @@
                                             <a target="_blank"
                                                 href="https://music.youtube.com/watch?v=O48gok_FLCg&list=RDAMVMO48gok_FLCg"
                                                 style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
-                                                <img src="./assets/youtube-music.png" height="20"
+                                                <img src="./assets/youtube_music.svg" height="20"
                                                     style="margin-right: 20px;" />
                                                 Youtube Music
                                                 <img src="./assets/open.svg" width="20" height="20"
@@ -172,7 +114,7 @@
                                         <li class="stream_buttons">
                                             <a target="_blank" href="https://music.amazon.com/albums/B00VDO364Y"
                                                 style="color:#374151; width: 100%; display: flex; justify-content: space-between;">
-                                                <img src="./assets/amazon_music.png" height="20"
+                                                <img src="./assets/amazon_music.svg" height="20"
                                                     style="margin-right: 20px;" />
                                                 Amazon Music
                                                 <img src="./assets/open.svg" width="20" height="20"
@@ -183,7 +125,88 @@
                                 </div>
                             </div>
                         </li>
-                        
+                        <!--Button Certificate-->
+                        <li class="accordion_item">
+                            <div class="accordion_header">
+                                <span>My Certificate</span>
+                                <span class="icon">+</span>
+                            </div>
+                            <div class="accordion_content">
+
+                                <div class="stream_buttons_list">
+                                    <ul>
+                                        <!--Change links below if needed-->
+                                        <li class="stream_buttons">
+                                            <a target="_blank"
+                                                href="https://coursera.org/share/07068eb563c0c6c578ebfd36d0e4360c"
+                                                style="color:#374151; width: 100%; height: 100%; 
+                                            display: flex; justify-content: space-between;">
+                                                <img src="./assets/google.svg" width="20" style="margin-right: 20px;" />
+                                                <p>Technical Support Basics</p>
+                                                <img src="./assets/open.svg" width="20" height="20"
+                                                    style="margin-left: auto" />
+                                            </a>
+                                        </li>
+                                        <li class="stream_buttons">
+                                            <a target="_blank"
+                                                href="https://coursera.org/share/44f0b07c835a38b3841f999aa9d9c802"
+                                                style="color:#374151; width: 100%; height: 100%; 
+                                            display: flex; justify-content: space-between;">
+                                                <img src="./assets/google.svg" width="20" style="margin-right: 20px;" />
+                                                <p>OS and You: Becoming a Power User</p>
+                                                <img src="./assets/open.svg" width="20" height="20"
+                                                    style="margin-left: auto" />
+                                            </a>
+                                        </li>
+                                        <li class="stream_buttons">
+                                            <a target="_blank"
+                                                href="https://coursera.org/share/f06fe2f2a83a2cb3da90831a9d42eef1"
+                                                style="color:#374151; width: 100%; height: 100%; 
+                                            display: flex; justify-content: space-between;">
+                                                <img src="./assets/google.svg" width="20" style="margin-right: 20px;" />
+                                                <p>Ins and Outs of Computer Networks</p>
+                                                <img src="./assets/open.svg" width="20" height="20"
+                                                    style="margin-left: auto" />
+                                            </a>
+                                        </li>
+                                        <li class="stream_buttons">
+                                            <a target="_blank"
+                                                href="https://coursera.org/share/2d555191e459bf100fd32495e8721534"
+                                                style="color:#374151; width: 100%; height: 100%; 
+                                            display: flex; justify-content: space-between;">
+                                                <img src="./assets/google.svg" width="20" style="margin-right: 20px;" />
+                                                <p>IT Sec: Defense Against Digital Crime</p>
+                                                <img src="./assets/open.svg" width="20" height="20"
+                                                    style="margin-left: auto" />
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                        <!--Button Project-->
+                        <li class="accordion_item">
+                            <div class="accordion_header">
+                                <span>My Projects</span>
+                                <span class="icon">+</span>
+                            </div>
+                            <div class="accordion_content">
+
+                                <div class="stream_buttons_list">
+                                    <ul>
+                                        <!--Change links below if needed-->
+                                        <li class="stream_buttons">
+                                            <a target="_blank"
+                                                href="https://api.whatsapp.com/send/?phone=6285864034767&text=.register&type=phone_number&app_absent=0"
+                                                style="color:#374151; width: 100%; height: 100%; 
+                                                    display: flex; justify-content: space-between;">
+                                                <img src="./assets/whangsaff.svg" width="20" style="margin-right: 20px;" />
+                                                <p>WA BOT (Nao-Botz V5)</p>
+                                                <img src="./assets/open.svg" width="20" height="20"
+                                                    style="margin-left: auto" />
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                        <!--Button Social Media-->
                         <li class="link_button">
                             <a target="_blank" href="https://www.ryzendesu.com">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -224,6 +247,7 @@
                                         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
                                 </svg>&nbsp;GitHub</a>
                         </li>
+
                     </ul>
                 </div>
             </section>
