modified:   index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 </div>
                                 <div class="available_stream">
                                     <audio id="song" class="block w-full max-w-md mx-auto" controls>
-                                        <source src="https://osanime.com/filedownload/2190008/Orange-(osanime.com).mp3"
+                                        <source src="https://cloud.ryzendesu.com/id/media/Orange.mp3"
                                             type="audio/mp3">
                                     </audio>
                                     <p style="color:grey;">Available on all streaming platforms</p>
