--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     </ul>
                                 </div>
                         <!--Button Project-->
-                        <li class="accordion_item">
+                        <!--<li class="accordion_item">
                             <div class="accordion_header">
                                 <span>My Projects</span>
                                 <span class="icon">+</span>
@@ -192,7 +192,6 @@
 
                                 <div class="stream_buttons_list">
                                     <ul>
-                                        <!--Change links below if needed-->
                                         <li class="stream_buttons">
                                             <a target="_blank"
                                                 href="https://api.whatsapp.com/send/?phone=6285864034767&text=.register&type=phone_number&app_absent=0"
@@ -205,7 +204,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                </div>
+                                </div>-->
                         <!--Button Social Media-->
                         <li class="link_button">
                             <a target="_blank" href="https://www.ryzendesu.com">
