--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Shirokami Ryzen</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link href="https://avatars.githubusercontent.com/u/76462435?v=4" rel="icon">
+    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/76462435?v=4">
 
     <script src="./js/three.r134.min.js"></script>
     <script src="./js/vanta.halo.min.js"></script>
