modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8'>
-    <title>Shirokami Ryzen</title>
+    <title>Fatih | Landing</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/76462435?v=4">
@@ -23,7 +23,7 @@
             <div>
                 <img src="./assets/profile.jpg" alt="Profile picture" />
             </div>
-            <h3> @ShirokamiRyzen </h3>
+            <h3> @Fatih_Firdaus </h3>
             <br>
             <br>
             <p>Programmer │ Modder │ Gamer</p>
