--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>on
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta charset='utf-8'>
-    <title>Fatih | Landing</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Favicons -->
+    <link href="https://avatars.githubusercontent.com/u/76462435?v=4" rel="icon">
     <link rel="stylesheet" href="./assets/css/styles.css">
-    <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/76462435?v=4">
 
     <script src="./js/three.r134.min.js"></script>
     <script src="./js/vanta.halo.min.js"></script>
