modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <source src="https://github.com/lknknm/link-in-bio/raw/main/assets/links-bg.webm" type="video/webm">
     </video>
     <div class="overlay"></div>
+    <title>Landing Page</title>
 </head>
 
 <body>
